--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ http://www.templatemo.com/tm-488-classic
                                         <div class="media tm-related-post">
                                           <div class="media-left media-middle">
                                             <a href="https://pxhere.com/en/photo/894428">
-                                              <img class="media-object" src="img/man-holding-banana.jpg" alt="Man points banana at you.">
+                                              <img class="media-object" src="img/man-holding-banana.jpg" class="img-fluid" alt="Man points banana at you.">
                                             </a>
                                           </div>
                                           <div class="media-body">
@@ -195,7 +195,7 @@ http://www.templatemo.com/tm-488-classic
                                         <div class="media tm-related-post">
                                           <div class="media-left media-middle">
                                             <a href="https://pxhere.com/en/photo/95528">
-                                              <img class="media-object" src="img/banana-pinkBG.jpg" alt="Yellow banana on a pink backgorund.">
+                                              <img class="media-object" src="img/banana-pinkBG.jpg" class="img-fluid" alt="Yellow banana on a pink backgorund.">
                                             </a>
                                           </div>
                                           <div class="media-body">
@@ -206,7 +206,7 @@ http://www.templatemo.com/tm-488-classic
                                         <div class="media tm-related-post">
                                           <div class="media-left media-middle">
                                             <a href="https://pxhere.com/en/photo/666944">
-                                              <img class="media-object" src="img/a-lot-of-bananas.jpg" alt="A lot of yellow bananas.">
+                                              <img class="media-object" src="img/a-lot-of-bananas.jpg" class="img-fluid" alt="A lot of yellow bananas.">
                                             </a>
                                           </div>
                                           <div class="media-body">
